--- a/edx_reverification_block/xblock/static/html/reverification.html
+++ b/edx_reverification_block/xblock/static/html/reverification.html
@@ -32,9 +32,9 @@
             Cancel
         </span>
       </button>
-  <input type="hidden" name="checkpoint" id="related_assessment_input" value="{checkpoint}" />
-  <input type="hidden" name="user_id" id="user_id_input" value="{user_id}" />
-  <input type="hidden" name="course_id" id="course_id_input" value="{course_id}" />
+  <input type="hidden" name="checkpoint" id="related_assessment_input" value="{{ checkpoint }}" />
+  <input type="hidden" name="user_id" id="user_id_input" value="{{ user_id }}" />
+  <input type="hidden" name="course_id" id="course_id_input" value="{{ course_id }}" />
   </div>
 </section>
 <div id="lean_overlay"></div>
